# KoalaEngine

./: .clang-format  .gitignore  .gitmodules  Build.bat  Build.sh  CMakeLists.txt  CODERULES.md  Dependencies.txt  Dependencies.yaml  GenerateProjectFiles.bat  GenerateProjectFiles.sh  ProjectCodingStyleForIdeaLikeIDE.xml  README.md  Setup.bat  Setup.sh  TODO.md  ThirdParty.cmake  init.py  main.cpp
CMake/: ProcessDependencies.cmake
Config/: EngineConfig.ini  GameConfig.ini
Engine/: CmdParser.cpp  CmdParser.h  Config.cpp  Engine.cpp  ModuleManager.cpp  ThreadModule.cpp
Engine/Include/: CmdParser.h  Config.h  Core.h  Definations.h  Engine.h  KoalaMath.h  Math.h  Module.h  RenderThread.h  StringTools.h  ThreadedModule.h
Engine/Include/FileSystem/: SystemPath.h
Engine/Include/PyScripting/: PyExecute.h  PyInclude.h  PyIntegrate.h
Engine/Include/RenderHI/: RenderCapability.h  RenderHI.h
Engine/Include/Renderer/: Camera.h  RenderView.h
Engine/Include/Renderer/Projectors/: Projector.h  Projectors.h
Engine/Include/Renderer/Projectors/Orthographic/: OrthographicProjector.h
Engine/Include/Renderer/Projectors/Perspective/: PerspectiveProjector.h
Engine/PyScripting/: PyExecute.cpp  PyIntegrate.cpp
Engine/RenderHI/: RHIConfig.cpp  RenderHI.h
Engine/RenderHI/VulkanRHI/: GLFW.cpp  Runtime.h  VkInitialization.cpp  VmaImplementation.cpp  VulkanRHI.cpp  VulkanRHI.h  VulkanRuntime.h
Engine/Renderer/: IRender.h  Projectors.cpp  RenderThread.cpp
Include/Engine/: Engine.h  EngineVersion.h  Module.h  Singleton.h  Thread.h
Include/Engine/RenderHI/: RenderHI.h
Include/Engine/Renderer/: RenderView.h
Source/Editor/: CMakeLists.txt  SourceFiles.cmake  main.cpp
Source/Engine/: CMakeLists.txt  SourceFiles.cmake
Source/Engine/Include/: CPUProfiler.h  CVarManager.h  CmdParser.h  Config.h  ConsoleVariable.h  ConsoleVariableBase.h  Core.h  Definations.h  Engine.h  KoalaEngine.h  Logger.h  RGBAColor.h  RenderThread.h  ThreadManager.h  ThreadNames.h
Source/Engine/Include/Asset/: Asset.h  BakedAsset.h  Mesh.h  MeshAsset.h  Serialize.h  StaticMesh.h
Source/Engine/Include/AsyncWorker/: AsyncTask.h  Task.h  TaskSet.h  WorkDispatcher.h  Worker.h
Source/Engine/Include/Core/: ByteStream.h  Check.h  CountedPtr.h  CountedRef.h  HashedString.h  KoalaLogger.h  Logger.h  Module.h  ModuleInterface.h  Singleton.h  SingletonInterface.h  StringHash.h  Thread.h  ThreadInterface.h  ThreadManager.h  ThreadTypes.h  ThreadedModule.h
Source/Engine/Include/Core/Serialization/: Archive.h  BinarySerializer.h  SerializableObject.h
Source/Engine/Include/Editor/: AssetImport.h
Source/Engine/Include/FileSystem/: AssetIO.h  File.h  FileIOManager.h  FileIOTask.h  FileIOThread.h  FileStream.h  IOManager.h  IOTask.h  IOThread.h  SystemPath.h
Source/Engine/Include/Game/: Actor.h  Event.h  Scene.h
Source/Engine/Include/Game/Components/: Component.h  MeshComponent.h
Source/Engine/Include/Math/: Rect.h
Source/Engine/Include/Memory/: Allocator.h  AllocatorBase.h  MemoryPool.h
Source/Engine/Include/PyScripting/: PyExecute.h  PyIntegrate.h
Source/Engine/Include/RHI/: BufferResources.h  CommandBufferResource.h  CommandBufferResources.h  RHI.h  RenderCapability.h  RenderDevice.h  TextureRHI.h  TextureResources.h
Source/Engine/Include/RHI/Interfaces/: BufferRHI.h  CommandBufferRHI.h  GPUDebugRHI.h  TextureRHI.h
Source/Engine/Include/RenderHI/: RenderHI.h
Source/Engine/Include/Renderer/: Camera.h  PixelFormat.h  RenderView.h  Scene.h
Source/Engine/Include/Renderer/Core/: RenderCmdProcessor.h
Source/Engine/Include/Renderer/Projectors/: Projector.h
Source/Engine/Include/Renderer/Projectors/Orthographic/: OrthographicProjector.h
Source/Engine/Include/Renderer/Projectors/Perspective/: PerspectiveProjector.h
Source/Engine/Include/TSContainer/: PriorityQueueTS.h  QueueTS.h
Source/Engine/Include/Worker/: Task.h  WorkDispatcher.h  Worker.h
Source/Engine/RenderHI/VulkanRHI/: VkInitialization.cpp
Source/Engine/Renderer/: Camera.cpp  Projector.cpp  RenderThread.cpp
Source/Engine/Scripts/: init.py
Source/Engine/Source/: CmdParser.cpp  Config.cpp  ConsoleVariable.cpp  Engine.cpp  KoalaEngine.cpp  ModuleManager.cpp  ThreadModule.cpp
Source/Engine/Source/Asset/: Asset.cpp  Mesh.cpp  MeshAsset.cpp
Source/Engine/Source/Asset/SimpleMesh/: TriangleMesh.cpp  TriangleMesh.h
Source/Engine/Source/AsyncWorker/: TaskSet.cpp  WorkDispatcher.cpp  Worker.cpp
Source/Engine/Source/Core/: ThreadTLS.cpp
Source/Engine/Source/FileSystem/: AssetIO.cpp  File.cpp  FileIOManager.cpp  FileIOThread.cpp  IOManager.cpp  IOTask.cpp
Source/Engine/Source/Game/Components/: MeshComponent.cpp
Source/Engine/Source/PyScripting/: PyExecute.cpp  PyIntegrate.cpp
Source/Engine/Source/RHI/: RHIConfig.cpp
Source/Engine/Source/RHI/VulkanRHI/: GLFW.cpp  Runtime.h  VkFormatMap.h  VkInitialization.cpp  VolkImplementation.cpp  VulkanBufferRHI.cpp  VulkanBufferRHI.h  VulkanCommandBufferRHI.cpp  VulkanCommandBufferRHI.h  VulkanCommandPool.h  VulkanCommandQueue.h  VulkanRHI.cpp  VulkanRHI.h  VulkanRenderDevice.h  VulkanTextureRHI.cpp  VulkanTextureRHI.h
Source/Engine/Source/RenderHI/: RHIConfig.cpp
Source/Engine/Source/RenderHI/VulkanRHI/: GLFW.cpp  VulkanRHI.h
Source/Engine/Source/Renderer/: Camera.cpp  Projector.cpp  RenderThread.cpp
Source/Engine/Source/Worker/: WorkDispatcher.cpp  Worker.cpp
Source/Program/DevScripts/: GenerateProjectFiles.py
Source/Program/DevScripts/libs/: Git.py  Global.py  Lib7Zip.py  SourceFiles.py  SyncDependence.py  Utils.py  VisualStudio.py  utils.py  visualstudio.py
Source/Program/ProjectSetupTool/: GenerateProjectFiles.py  Sync.py
Source/Program/ProjectSetupTool/libs/: CMake.py  Dependencies.py  Download.py  Git.py  Global.py  Logger.py  SourceFiles.py  SyncDependence.py  VisualStudio.py  Vulkan.py
Source/Programs/DependenciesSync/: DependenciesSync.py
Source/Tests/: CMakeLists.txt  TestCountedPtr.cpp  TestCountedRef.cpp
src/: PyIntegrate.cpp  PyIntegrate.h
